# glfontrenderer

./: CMakeLists.txt  README.md  library.h
dependencies/include_win32/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  ftcolor.h  ftdriver.h  fterrors.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlogging.h  ftlzw.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  fttrigon.h  fttypes.h  ftwinfnt.h  otsvg.h  t1tables.h  tttables.h  tttags.h
dependencies/include_win32/freetype/config/: ftconfig.h
src/: bitmap.h  colorutils.h  fileutils.cpp  fileutils.h  font.cpp  font.h  libs.cpp  logger.cpp  logger.h  main.cpp  timeutils.h  ttfloader.cpp  ttfloader.h
src/render/: bufferbuilder.cpp  bufferbuilder.h  font_mesh_builder.cpp  font_mesh_builder.h  fontmeshbuilder.h  gl_buffer.cpp  gl_buffer.h  gl_object.h  gl_shader.cpp  gl_shader.h  gl_texture_2d.cpp  gl_texture_2d.h
src/text/: utf8.cpp  utf8.h  utf8_iterator.h
