cmake_minimum_required(VERSION 3.22)
project(GLFontRenderer)

set(CMAKE_CXX_STANDARD 23)

set(GLFONTRENDERER_DEPENDENCY_DIRECTORY ${CMAKE_SOURCE_DIR}/dependencies)
set(GLFONTRENDERER_INCLUDE_DIRECTORY ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/include)
set(GLFONTRENDERER_LIBRARY_DIRECTORY ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

if (WIN32)
    set(GLFONTRENDERER_LIBRARIES ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2.lib
            ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2main.lib
            ${GLFONTRENDERER_LIBRARY_DIRECTORY}/freetype.lib
            ${GLFONTRENDERER_LIBRARY_DIRECTORY}/glew32.lib
            opengl32.lib)

    list(APPEND GLFONTRENDERER_LIBRARIES ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/include_win32)
else ()
    find_package(SDL2 REQUIRED)
    find_package(Freetype REQUIRED)
    find_package(GLEW REQUIRED)

    set(GLFONTRENDERER_LIBRARIES ${SDL2_LIBRARIES} ${FREETYPE_LIBRARIES} ${GLEW_LIBRARIES} -lGL)

    include_directories(${SDL2_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
endif ()

include_directories(${GLFONTRENDERER_INCLUDE_DIRECTORY})

file(GLOB_RECURSE GLFONTRENDERER_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.c**)
file(GLOB_RECURSE GLFONTRENDERER_HEADER_FILES ${CMAKE_SOURCE_DIR}/src/*.h**)

#add_library(GLFontRenderer SHARED ${GLFONTRENDERER_SOURCE_FILES} ${GLFONTRENDERER_HEADER_FILES})
add_executable(GLFontRenderer ${GLFONTRENDERER_SOURCE_FILES} ${GLFONTRENDERER_HEADER_FILES} src/render/gl_buffer.cpp src/render/gl_buffer.h src/colorutils.h)
target_link_libraries(GLFontRenderer ${GLFONTRENDERER_LIBRARIES})
